force-app/main/default/objects/Contract_Document__c/Contract_Document__c.object-meta.xml
<CustomObject>
    <label>Contract Document</label>
    <nameField>
        <displayFormat>DOC-{0000}</displayFormat>
        <label>Contract Document Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>