force-app/main/default/objects/Contract_Document__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Original Contract</fullName>
            </value>
            <value>
                <fullName>Amendment</fullName>
            </value>
            <value>
                <fullName>COI</fullName>
            </value>
            <value>
                <fullName>Additional Insured Endorsement</fullName>
            </value>
            <value>
                <fullName>ICA Approval Form</fullName>
            </value>
            <value>
                <fullName>Executed Copy</fullName>
            </value>
            <value>
                <fullName>Counterparty Template</fullName>
            </value>
            <value>
                <fullName>YGSF Template</fullName>
            </value>
            <value>
                <fullName>Supporting Document</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>